--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.6.4",
     "rxjs": "~7.8.0",
+    "tether": "^2.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
